[gd_scene load_steps=6 format=3 uid="uid://ep77lvip83kt"]

[ext_resource type="Script" path="res://scripts/entity/adventurer/RangedHero.gd" id="1_ud2tp"]
[ext_resource type="PackedScene" uid="uid://bjqb4w7t3q0yb" path="res://prefabs/entities/all_character.tscn" id="2_q7qng"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itsys"]
size = Vector2(99, 108)

[sub_resource type="CircleShape2D" id="CircleShape2D_r3tra"]
radius = 707.12

[sub_resource type="RectangleShape2D" id="RectangleShape2D_newge"]
size = Vector2(307, 284)

[node name="RangedHero" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 34
script = ExtResource("1_ud2tp")
MovementSpeed = 350.0
ConsumptionScore = 10.0

[node name="GraphicsController" parent="." instance=ExtResource("2_q7qng")]
position = Vector2(-1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_itsys")

[node name="SightRange" type="Area2D" parent="."]
position = Vector2(-1, 0)
collision_layer = 0
collision_mask = 27

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightRange"]
shape = SubResource("CircleShape2D_r3tra")

[node name="CivilianCloseEnough" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CivilianCloseEnough"]
shape = SubResource("RectangleShape2D_newge")
debug_color = Color(0.792157, 0.0862745, 1, 0.419608)

[node name="TravelBrain" type="NavigationAgent2D" parent="."]
target_desired_distance = 150.0

[node name="SpawnProjectileTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="SightRange" to="." method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_sight_range_body_exited"]
[connection signal="timeout" from="SpawnProjectileTimer" to="." method="_on_spawn_projectile_timer_timeout"]
